[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["NewAgeDeveloper <thenewagedevelopers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
